--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </nav>
     </aside>
 
-    <header>
+    <header class="header">
       <button
         class="menu-btn js-menu-open"
         type="button"
@@ -133,7 +133,7 @@
       </button>
     </header>
 
-    <main>
+    <main class="main">
       <section class="welcome">
         <h1 class="page-title">
           <span class="page-title-accent">Hi Oksana,</span>
