co-workers table

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
           <div class="co-workers-container">
             <details class="co-workers-details">
-              <summary class="co-workers-data">
+              <summary class="co-workers-sum">
                 <svg class="co-workers-icon" width="16" height="16">
                   <use class="plus" href="./src/img/icons.svg#icon-plus"></use>
                   <use
@@ -202,7 +202,7 @@
               </div>
             </details>
             <details class="co-workers-details">
-              <summary class="co-workers-data">
+              <summary class="co-workers-sum">
                 <svg class="co-workers-icon" width="16" height="16">
                   <use class="plus" href="./src/img/icons.svg#icon-plus"></use>
                   <use
@@ -248,7 +248,7 @@
               </div>
             </details>
             <details class="co-workers-details">
-              <summary class="co-workers-data">
+              <summary class="co-workers-sum">
                 <svg class="co-workers-icon" width="16" height="16">
                   <use class="plus" href="./src/img/icons.svg#icon-plus"></use>
                   <use
@@ -294,7 +294,7 @@
               </div>
             </details>
             <details class="co-workers-details">
-              <summary class="co-workers-data">
+              <summary class="co-workers-sum">
                 <svg class="co-workers-icon" width="16" height="16">
                   <use class="plus" href="./src/img/icons.svg#icon-plus"></use>
                   <use
@@ -340,7 +340,7 @@
               </div>
             </details>
             <details class="co-workers-details">
-              <summary class="co-workers-data">
+              <summary class="co-workers-sum">
                 <svg class="co-workers-icon" width="16" height="16">
                   <use class="plus" href="./src/img/icons.svg#icon-plus"></use>
                   <use
