--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <ul class="menu-list">
           <li class="menu-item">
-            <a href="./index.html" class="menu-link current">
+            <a href="#" class="menu-link current">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-columns"></use>
               </svg>
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">
+            <a href="#" class="menu-link">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-person-plus"></use>
               </svg>
@@ -45,7 +45,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">
+            <a href="#" class="menu-link">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-briefcase"></use>
               </svg>
@@ -53,7 +53,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">
+            <a href="#" class="menu-link">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-coin"></use>
               </svg>
@@ -61,7 +61,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">
+            <a href="#" class="menu-link">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-clipboard"></use>
               </svg>
@@ -69,7 +69,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">
+            <a href="#" class="menu-link">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-envelope"></use>
               </svg>
@@ -78,7 +78,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">
+            <a href="#" class="menu-link">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-calendar"></use>
               </svg>
@@ -86,7 +86,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">
+            <a href="#" class="menu-link">
               <svg class="menu-icon" width="20" height="20">
                 <use href="./src/img/icons.svg#menu-journal"></use>
               </svg>
